--- a/SummitSportsApp/SummitSportsApp/Properties/Resources.resx
+++ b/SummitSportsApp/SummitSportsApp/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="bgLogon43" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\bgLogon43.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconNormal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconNormal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
